--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Code from the paper "A signature-based machine learning model for bipolar disorder and borderline personality disorder".
+# A signature-based machine learning model for bipolar disorder and borderline personality disorder
+
+This repository contains the code from the paper *A signature-based machine learning model for bipolar disorder and borderline personality disorder*, a pre-print of which is available on arXiv:
+
+> Arribas, I.P., Saunders, K., Goodwin, G. and Lyons, T., 2017. A signature-based machine learning model for bipolar disorder and borderline personality disorder. [arXiv preprint arXiv:1707.07124](https://arxiv.org/abs/1707.07124).
